# RAG-based-Mental-Health-Chatbot

./: .gitignore  README.md  pyproject.toml
eval/: eval.py
src/: .env.example  main.py  pyproject.toml
src/api/v1/: router.py
src/api/v1/endpoints/: chat.py  health.py
src/core/: Config.py  __init__.py  logger.py
src/db/: VectorDBENUM.py  __init__.py  vector_db_factory.py  vector_db_interface.py
src/db/chunking/: __init__.py  chunking.py  index.py  retrieve.py
src/db/providers/: Chroma_provider.py  Qdrant_provider.py  __init__.py
src/logs/: app.log.2026-05-18
src/prompts/: Intent_classifier_prompt.txt  Intent_classifier_system_prompt.py  Rag_generation_system_prompt.py  __init__.py  normal_chat_system_prompt.py  query_rewrite_prompt.py
src/rag/: Language_Detection.ipynb  Language_detector.py  __init__.py
src/rag/Emotion_Classifier_module/: Emotion_classifier.py  Emotion_dataset.ipynb  __init__.py  emotion-detection-fine-tunning.ipynb
src/rag/Intent_Classifier_module/: Intent_classifier.py  __init__.py
src/rag/Language_Detection_module/: Language_detector.py  __init__.py
src/rag/Rag_module/: Normal_pipeline.py  __init__.py  base_pipeline.py  conversation.py  full_pipeline.py  rag_pipeline.py
src/stores/: LLMEnums.py  LLMInterface.py  LLM_Provider_Factory.py  __init__.py  embedding.py  generation.py  schema.py
src/stores/llm/: LLMEnums.py  LLMInterface.py  LLM_Provider_Factory.py  embedding.py  generation.py  schema.py
src/stores/llm/providers/__init__/: CoHere_provider.py  Groq_provider.py  OpenAI_provider.py
src/stores/providers/: CoHere_provider.py  Colab_provider.py  Gemini_provider.py  Groq_provider.py  HuggingFace_provider.py  OpenAI_provider.py  __init__.py
src/stores/providers/__init__/: Groq_provider.py  HuggingFace_provider.py
src/tests/: emotion_detector_test.py  language_detector_test.py  qdrant_provider_test.py
