[project]
name = "rag-based-mental-health-chatbot"
version = "0.1.0"
description = "it's a RAG application used to help people about their mental problems"
authors = [
    {name = "Ali-Abdelmenam",email = "aliabdelmonam37@gmail.com"}
]
requires-python = ">=3.12,<3.15"
dependencies = [
    "numpy (>=2.4.5,<3.0.0)",
    "joblib (>=1.5.3,<2.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "transformers (>=5.8.1,<6.0.0)",
    "torch (>=2.12.0,<3.0.0)",
    "nltk (>=3.9.4,<4.0.0)",
    "demoji (>=2.0.0,<3.0.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "groq (>=1.2.0,<2.0.0)",
    "qdrant-client (>=1.18.0,<2.0.0)",
    "openai (>=2.38.0,<3.0.0)",
    "cohere (>=7.0.0,<8.0.0)",
    "ragas (>=0.4.3,<0.5.0)",
    "datasets (>=4.8.5,<5.0.0)",
    "llama-index (>=0.14.22,<0.15.0)",
    "tiktoken (>=0.13.0,<0.14.0)",
    "pandas (>=3.0.3,<4.0.0)"
]

[tool.setuptools]
package-dir = {"" = "src"}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
